# JQuantsAPI

./: .gitignore  pyproject.toml
jquantsapi/: kakunin.py  main.py  main_local.py  main_s3.py  send_data_to_s3.ipynb  try_athena-timeseries.py  ●JQuantsデータ更新_v3.ipynb
jquantsapi/athena_timeseries/: __init__.py  dt.py  uploader.py
jquantsapi/athena_timeseries/sql/: __init__.py  basic.py  resample.py
jquantsapi/lib/: jquantsapi.py  utils.py
