[tool.poetry]
name = "jquantsapi"
version = "0.1.0"
description = ""
authors = ["tak34 <trira7503@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.5.3"
matplotlib = "3.7.1"
seaborn = "0.13.1"
requests = "2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
